translation-tool/inputs/source_meta/objects/HSvc_ProviderGroupCredentials__c.object
<CustomObject>
    <description>This object is a junction between of HSvc_ProviderGroup and HSvc_ExternalSystemCredentials__c object. This is responsible for holding the different URLs  and the user credentials for those urls for a specific Provider Group</description>
    <fields>
        <fullName>ExternalSystemCredential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External System Credential</label>
        <referenceTo>HSvc_ExternalSystemCredentials__c</referenceTo>
        <relationshipLabel>ProviderGroupCredentials</relationshipLabel>
        <relationshipName>ProviderGroupCredentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ProviderGroup__c</fullName>
        <label>Provider Group</label>
        <referenceTo>HSvc_ProviderGroup__c</referenceTo>
        <relationshipName>HSvc_ProviderGroupCredentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>ProviderGroupCredential</label>
    <nameField>
        <displayFormat>PGC-{00000000}</displayFormat>
        <label>Provider Group Credentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProviderGroupCredentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>